# ftagent

./: .demo-ftagent.sh  CHANGELOG.md  LICENSE  README.md  demo.tape  install.sh  pyproject.toml  requirements-optional.txt
.github/workflows/: test-and-release.yml
ftagent/: __init__.py  __main__.py  agent.py  flow_collector.py  mirror_engine.py  tui.py
packaging/: config.example.json  ftagent.service
tests/: test_agent.py  test_api_integration.py  test_dashboard_api.py  test_edge_cases.py  test_flow_collector.py  test_mirror.py
